fetch categories using store specific implementation